@@ -20,6 +20,12 @@
            {:extra-deps {clj-kondo/clj-kondo {:mvn/version "2023.02.17"}}
             :main-opts ["-m" "clj-kondo.main"]}
 
+           :eastwood
+           {:extra-paths ["test/integration"]
+            :extra-deps {jonase/eastwood {:mvn/version "1.3.0"}}
+            :main-opts ["-m" "eastwood.lint" {:source-paths ["src"]
+                                              :test-paths ["test/integration"]}]}
+
            :outdated
            {:replace-deps {com.github.liquidz/antq {:mvn/version "2.2.992"}
                            org.slf4j/slf4j-simple {:mvn/version "2.0.6"} ;; to rid ourselves of logger warnings
